kubernetes/apps/cortex/litellm/proxy/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: litellm-mcp
  namespace: cortex
  annotations:
    gatus.home-operations.com/endpoint: |-
      url: https://litellm.dcunha.io/health/liveliness
      conditions: ["[STATUS] == 200"]
      group: internal
spec:
  hostnames:
    - "litellm.dcunha.io"
  parentRefs:
    - name: internal-gateway
      namespace: network
  rules:
    - timeouts:
        request: "0s"
      backendRefs:
        - name: litellm
          port: 4000
